Bug 1784484 - Properly handle reduce motion and prefers contrast in text recognition modal; r=nordzilla
Differential Revision: https://phabricator.services.mozilla.com/D154530

UltraBlame original commit: d3298f25faad591ff9ecd9daa19d08388925cc5a

--- a/browser/components/textrecognition/textrecognition.css
+++ b/browser/components/textrecognition/textrecognition.css
@@ -241,6 +241,19 @@ end
 5px
 ;
 }
+media
+(
+prefers
+-
+reduced
+-
+motion
+:
+no
+-
+preference
+)
+{
 .
 textRecognitionThrobber
 :
@@ -375,6 +388,73 @@ steps
 infinite
 ;
 }
+}
+media
+(
+prefers
+-
+reduced
+-
+motion
+:
+reduce
+)
+{
+.
+textRecognitionThrobber
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+hourglass
+.
+svg
+"
+)
+;
+background
+-
+position
+:
+center
+;
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+currentColor
+;
+}
+}
 .
 textRecognitionSuccessIcon
 {
@@ -444,6 +524,23 @@ end
 :
 6px
 ;
+}
+media
+(
+prefers
+-
+reduced
+-
+motion
+:
+no
+-
+preference
+)
+{
+.
+textRecognitionSuccessIcon
+{
 animation
 :
 success
@@ -465,6 +562,7 @@ bezier
 94
 )
 ;
+}
 }
 .
 textRecognitionNoResultIcon
@@ -542,6 +640,14 @@ page
 -
 background
 )
+;
+}
+.
+textRecognitionNoResultIcon
+{
+fill
+:
+currentColor
 ;
 }
 }
